web update for boids, reorganize

--- a/projects/boids/TODO
+++ b/projects/boids/TODO
@@ -1,3 +1,12 @@
+6/14/2025:
+- Reorganize [ ]
+- Fork: make a generic node editor.
+	- something kinda like draw.io, but for fixed function pipeline type thing
+	- roll your own CLAY type thing
+	- Quaternions?
+	- Make it connect to the database?
+	
+	
 5/27/2025:
 - Compile to WASM [x]
 - see https://github.com/Reesy/sdl2-emscripten-project-template
